feat(web): add authentication pages with forreel-style layout
Implement sign in and sign up functionality matching the forreel project:

- Add login page with indigo/purple gradient branding panel
- Add register page with emerald/teal gradient branding panel
- Create auth store with zustand for token management
- Add auth hooks (useAuth, useRequireAuth, useRequireAdmin)
- Create auth-api client for direct API calls
- Add form validation schemas (loginFormSchema, registerFormSchema)
- Update home screen to redirect to login when not authenticated
- Add auth layout with public route protection

The auth flow follows the same pattern as forreel:
- Split layout with branding on left, form on right
- Responsive design hides branding panel on mobile
- Token persistence via localStorage
- Automatic token refresh handling

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@mediaserver/api-client": "workspace:*",
+    "@mediaserver/config": "workspace:^",
     "@mediaserver/core": "workspace:*",
     "@mediaserver/ui": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -29,6 +31,7 @@
     "nativewind": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.68.0",
     "react-native": "0.76.0",
     "react-native-gesture-handler": "~2.20.0",
     "react-native-reanimated": "~3.16.0",
@@ -37,6 +40,7 @@
     "react-native-web": "~0.19.0",
     "react-native-worklets": "^0.7.0",
     "superjson": "^2.2.0",
+    "zod": "^4.1.13",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
