fix: resolve TypeScript and linter errors across packages
Fix build failures in multiple packages:

- config: use z.input type for env override function to fix type compatibility
- api-client: remove unused @ts-expect-error directives, add explicit trpc type
- ui: add nativewind types, update react-native peer dep to 0.76+, fix unused vars
- scanner: create missing tsconfig files, fix string|undefined type issues
- privacy: clear path aliases in tsconfig.lib.json to fix rootDir conflicts
- server: import count from @mediaserver/db instead of drizzle-orm directly

Also update .gitignore to prevent compiled outputs in src folders.

--- a/packages/scanner/tsconfig.json
+++ b/packages/scanner/tsconfig.json
@@ -4,10 +4,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
-    "declarationMap": true,
-    "jsx": "react-jsx"
+    "declarationMap": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "nativewind-env.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "test"]
 }
-
