--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ build/
 out/
 *.tsbuildinfo
 
+# TypeScript compiled outputs in src (should be in dist)
+packages/*/src/**/*.js
+packages/*/src/**/*.js.map
+packages/*/src/**/*.d.ts
+packages/*/src/**/*.d.ts.map
+
 # Nx
 .nx/
 .cache/
