--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,11 +31,13 @@
   "peerDependencies": {
     "nativewind": "^4.0.0",
     "react": "^18.2.0",
-    "react-native": ">=0.73.0"
+    "react-native": ">=0.76.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
-    "@types/react-native": "^0.73.0",
+    "nativewind": "^4.0.0",
+    "react": "^18.2.0",
+    "react-native": "0.76.0",
     "typescript": "^5.4.0",
     "vitest": "^2.1.0"
   }
