--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
       - name: Enable Corepack
         run: corepack enable
 
@@ -136,6 +141,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
       - name: Enable Corepack
         run: corepack enable
 
@@ -164,7 +174,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Run unit tests
-        run: yarn nx run-many -t test
+        run: yarn nx run-many -t test -- --passWithNoTests
 
   # Summary job - required status check
   ci:
