fix(typecheck): resolve TypeScript errors across packages
- Add paths: {} to tsconfig.json in privacy, scanner, server packages to
  fix rootDir conflicts during typecheck
- Add NativeWind type definitions to mobile and tv apps for className prop
- Fix unused variables and imports in server routers
- Export search result interfaces for proper type declaration generation
- Fix settings.ts insert (settings table has key as primary key, not id)
- Fix Context interface with index signature for tRPC Hono adapter
- Remove unused useSaveMetadataProviders hook from web setup page
- Fix useEffect return value in setup page

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -4,17 +4,15 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@mediaserver/core": ["../../packages/core/src/index.ts"],
-      "@mediaserver/ui": ["../../packages/ui/src/index.ts"],
-      "@mediaserver/api-client": ["../../packages/api-client/src/index.ts"]
+      "@/*": ["src/*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
 
