--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "types": ["bun-types"]
+    "types": ["bun-types"],
+    "paths": {}
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "test"]
