--- a/apps/tv/tsconfig.json
+++ b/apps/tv/tsconfig.json
@@ -6,11 +6,9 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "paths": {
-      "@mediaserver/*": ["../../packages/*/src"]
-    }
+    "paths": {}
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts"],
   "exclude": ["node_modules"]
 }
 
