--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~18.3.0",
+    "babel-plugin-transform-import-meta": "^2.3.3",
     "eslint": "^8.57.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0"
