--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "clsx": "^2.1.0",
     "expo": "~52.0.0",
     "expo-constants": "~16.0.0",
     "expo-linking": "~6.3.0",
@@ -40,6 +41,7 @@
     "react-native-web": "~0.19.0",
     "react-native-worklets": "^0.7.0",
     "superjson": "^2.2.0",
+    "tailwind-merge": "^2.2.0",
     "zod": "^4.1.13",
     "zustand": "^4.5.0"
   },
