fix(setup): resolve redirect race condition after wizard completion
- Fix cache invalidation timing issue where AuthGuard saw stale data
  after setup completion, causing redirect back to setup page
- Use optimistic cache update with setData() before navigation instead
  of relying solely on async invalidate()
- Clean up debug logging statements from setup wizard and AuthGuard
- Update CLAUDE.md with Nix flake instructions and cache update pattern

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,8 +13,13 @@
     "./*": {
       "types": "./dist/*.d.ts",
       "import": "./dist/*.js"
-    }
+    },
+    "./drizzle": "./drizzle"
   },
+  "files": [
+    "dist",
+    "drizzle"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.lib.json",
     "dev": "tsc -p tsconfig.lib.json --watch",
