feat(server): switch from Bun to Node.js and implement library scanning
- Migrate server runtime from Bun to Node.js with tsx for development
- Implement library scanning service with real-time progress updates
- Add @expo/vector-icons for polished library card UI
- Include item counts (movies/shows) in library list endpoint
- Add idSchema validation for nanoid-format IDs
- Fix ESM __dirname compatibility in migrate.ts
- Update CLAUDE.md to reflect Node.js runtime

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@mediaserver/api-client": "workspace:*",
     "@mediaserver/config": "workspace:^",
