--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,21 +16,23 @@
     }
   },
   "scripts": {
-    "dev": "bun run --watch src/main.ts",
-    "build": "bun build src/main.ts --outdir dist --target bun",
-    "start": "bun run dist/main.js",
-    "test": "bun test || true",
-    "test:watch": "bun test --watch",
+    "dev": "tsx watch src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.0",
     "@hono/trpc-server": "^0.3.0",
     "@libsql/client": "^0.15.15",
     "@mediaserver/config": "workspace:*",
     "@mediaserver/core": "workspace:*",
     "@mediaserver/db": "workspace:*",
     "@mediaserver/privacy": "workspace:*",
+    "@mediaserver/scanner": "workspace:*",
     "@node-rs/argon2": "^1.8.0",
     "@trpc/server": "^11.0.0-rc.0",
     "hono": "^4.5.0",
@@ -39,8 +41,10 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.0",
+    "@types/node": "^22.0.0",
     "pino-pretty": "^13.1.3",
-    "typescript": "^5.4.0"
+    "tsx": "^4.19.0",
+    "typescript": "^5.4.0",
+    "vitest": "^2.0.0"
   }
 }
