--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@gluestack-ui/core": "^3.0.12",
     "@hookform/resolvers": "^5.2.2",
+    "@legendapp/motion": "^2.4.0",
     "@mediaserver/api-client": "workspace:*",
     "@mediaserver/config": "workspace:^",
     "@mediaserver/core": "workspace:*",
@@ -31,6 +33,7 @@
     "expo-router": "~4.0.0",
     "expo-secure-store": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "lucide-react-native": "^0.510.0",
     "nativewind": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -38,8 +41,9 @@
     "react-native": "0.76.0",
     "react-native-gesture-handler": "~2.20.0",
     "react-native-reanimated": "~3.16.0",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.19.0",
     "react-native-worklets": "^0.7.0",
     "superjson": "^2.2.0",
