--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.13.8",
     "@expo/vector-icons": "^15.0.3",
     "@gluestack-ui/core": "^3.0.12",
+    "@gluestack-ui/utils": "^3.0.13",
     "@hookform/resolvers": "^5.2.2",
     "@legendapp/motion": "^2.4.0",
     "@mediaserver/api-client": "workspace:*",
