--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start --web",
-    "dev": "expo start --web --port 8081",
+    "start": "CI=false expo start --web",
+    "dev": "CI=false expo start --web --port 8081",
     "build": "expo export --platform web",
     "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc --noEmit"
