--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "expo-router": "~4.0.0",
     "expo-secure-store": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "hls.js": "^1.6.15",
     "lucide-react-native": "^0.510.0",
     "nativewind": "^4.0.0",
     "react": "18.3.1",
